[ #403 ] - words overflowing fix ( columns )

--- a/public/css/columns.css
+++ b/public/css/columns.css
@@ -16,6 +16,7 @@
 	-webkit-column-break-inside: avoid;
 	page-break-inside: avoid;
 	break-inside: avoid;
+	word-wrap: break-word;
 }
 
 /*
